--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,10 @@
     <string name="nav_header_title">Справочник рыбака</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Настройки</string>
+    <string name="middle_value">Средний</string>
+    <string name="mine_text_size">Размер текста</string>
+    <string name="mine_text_size_settings">Настройки текста</string>
     <string name="button_start">Start</string>
     <string name="fish">Рыба</string>
     <string name="staff">Снасти</string>
